[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Images/Drill/Drill1.png" type="Texture" id=2]
[ext_resource path="res://src/Images/Drill/Drill2.png" type="Texture" id=3]
[ext_resource path="res://src/Images/Drill/Drill3.png" type="Texture" id=4]
[ext_resource path="res://src/GUI/Health_bar.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -22, 8, -8, 8, 10, -8, 10, -8, -8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 9 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="Player_drill" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -23 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Health_bar" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
